k8s/applications/microservices-demo/comments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      serviceAccountName: comments-sa
      containers:
        - name: comments
          image: 657830185735.dkr.ecr.us-east-1.amazonaws.com/microservices-demo-comments:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
---
apiVersion: v1
kind: Service
metadata:
  name: comments
spec:
  selector:
    app: comments
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
