k8s/applications/microservices-demo/event-bus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: 657830185735.dkr.ecr.us-east-1.amazonaws.com/microservices-demo-event-bus:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8005
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus
spec:
  selector:
    app: event-bus
  ports:
    - port: 8005
      targetPort: 8005
  type: ClusterIP
