k8s/applications/microservices-demo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: microservices-ingress

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0ba53ff059a12d8dc,subnet-0ef95c1c86df670ff

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts
                port:
                  number: 8001

          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comments
                port:
                  number: 8002

          - path: /query
            pathType: Prefix
            backend:
              service:
                name: query
                port:
                  number: 8003

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
